# Algorithm

./: GAUSS13.CPP  aaa  gauss.html  rename.txt  tmp  url  y2  yvibe.c  yvibe.h  yvibeMain.c  zip
geometry/: geometry.h
geometry/includes/: Edge.h  Point.h  Polygon.h
geometry/src/: Edge.cpp  Point.cpp  Polygon.cpp
geometry/test/: main.cpp
ml/: CMakeLists.txt
ml/dl/: CMakeLists.txt  test.cpp
ml/dl/assets/: LeNet_model
ml/dl/else/: a2.cpp  test.cpp
ml/dl/else/mnist/: train.cpp
ml/dl/src/: test.cpp  train.cpp
ml/dl/src/includes/: dl.h
ml/dl/z/: CMakeCache.txt  LeNet-model  Makefile  cmake_install.cmake  install_manifest.txt
res/layout/: main.xml
res/values/: strings.xml
